--- a/packages/dashboard_package.yaml
+++ b/packages/dashboard_package.yaml
@@ -1,11 +1,11 @@
+# /config/packages/dashboard_package.yaml
 lovelace:
-  mode: storage
   dashboards:
-    smarti_language_norsk:
+    smarti-language-norsk:  # URL path with a hyphen
       mode: yaml
       title: "SMARTi Language Norsk"
       filename: dashboards/SMARTi_Language_Norsk.yaml
-    smarti_language_english:
+    smarti-language-english:  # URL path with a hyphen
       mode: yaml
       title: "SMARTi Language English"
       filename: dashboards/SMARTi_Language_English.yaml
