--- a/packages/dashboard_package.yaml
+++ b/packages/dashboard_package.yaml
@@ -5,7 +5,9 @@ lovelace:
       mode: yaml
       title: "SMARTi Language Norsk"
       filename: dashboards/SMARTi_Language_Norsk.yaml
+      show_in_sidebar: false
     smarti-language-english:  # URL path with a hyphen
       mode: yaml
       title: "SMARTi Language English"
       filename: dashboards/SMARTi_Language_English.yaml
+      show_in_sidebar: false      
