--- a/packages/dashboard_package.yaml
+++ b/packages/dashboard_package.yaml
@@ -11,6 +11,5 @@ lovelace:
       title: "SMARTi Language English"
       filename: dashboards/SMARTi_Language_English.yaml
       icon: mdi:tablet-dashboard
-      description: "This is SMARTis Auto-Updated Dashboard." 
-      theme: "light-mode"      
-      show_in_sidebar: false      
+      description: "This is SMARTis Auto-Updated Dashboard."     
+      show_in_sidebar: true      
