--- a/packages/dashboard_package.yaml
+++ b/packages/dashboard_package.yaml
@@ -12,3 +12,4 @@ lovelace:
       icon: mdi:tablet-dashboard
       description: "This is SMARTis Auto-Updated Dashboard."
       show_in_sidebar: true
+# Some comments to check
