--- a/packages/smarti_navbar_package.yaml
+++ b/packages/smarti_navbar_package.yaml
@@ -153,7 +153,7 @@ sensor:
         value_template: >
           {%- set low_battery_devices_count = namespace(count=0) %}
           {%- for state in states.sensor | selectattr('attributes.device_class', 'eq', 'battery') %}
-            {% if 0 <= state.state | int(-1) <= 20 %}
+            {% if state.state.isnumeric() and 0 <= state.state | int(-1) <= 20 %}
               {%- set low_battery_devices_count.count = low_battery_devices_count.count + 1 %}
             {% endif %}
           {%- endfor %}
@@ -175,8 +175,8 @@ sensor:
             selectattr('attributes.device_class', 'eq', 'battery') |
             selectattr('attributes.state_class', 'eq', 'measurement') %}
           {% for device in active_battery_devices %}
-            {% set battery_level = device.state | int %}
-            {% if battery_level < 20 and device.name and battery_level %}
+            {% set battery_level = device.state | int(-1) %}
+            {% if battery_level >= 0 and battery_level < 20 and device.name %}
               {{ device.name }} (Battery Level: {{ battery_level }}){% if not loop.last %}, {% endif %}
             {% endif %}
           {% endfor %}
