--- a/themes/smarti_themes/smarti_theme.yaml
+++ b/themes/smarti_themes/smarti_theme.yaml
@@ -503,7 +503,7 @@ ________________________________________Common Base 3 (Do Not Use): &common-card
         .mdc-dialog__surface {
             backdrop-filter: blur(16px) !important;
             -webkit-backdrop-filter: blur(16px) !important;
-            background-color: rgba(var(--rgb-mdc-theme-surface), 0.5) !important;
+            background-color: rgba(var(--rgb-mdc-theme-surface), 1) !important;
         }
       }
       .mdc-dialog .mdc-dialog__container .mdc-dialog__surface,
@@ -743,7 +743,7 @@ ________________________________________Common Base 5 (Do Not Use):
 # It's relatively easy to create your own theme. You just need to provide the colors.
 
 
-SMARTi Metro Red:
+SMARTi Red:
   <<: *common-card-mods
   card-mod-theme: "Metro Red"
 
@@ -794,7 +794,7 @@ SMARTi Fluent Red:
 
 
 
-SMARTi Metro Blue:
+SMARTi Blue:
   <<: *common-card-mods
   card-mod-theme: "Metro Blue"
 
@@ -845,7 +845,7 @@ SMARTi Fluent Blue:
 
 
 
-SMARTi Metro Green:
+SMARTi Green:
   <<: *common-card-mods
   card-mod-theme: "Metro Green"
 
@@ -896,7 +896,7 @@ SMARTi Fluent Green:
 
 
 
-SMARTi Metro Orange:
+SMARTi Orange:
   <<: *common-card-mods
   card-mod-theme: "Metro Orange"
 
@@ -947,7 +947,7 @@ SMARTi Fluent Orange:
 
 
 
-SMARTi Metro Purple:
+SMARTi Purple:
   <<: *common-card-mods
   card-mod-theme: "Metro Purple"
 
@@ -1000,7 +1000,7 @@ SMARTi Fluent Purple:
 
 # Use the following as the template for your custom color theme.
 
-SMARTi Metro Slate:
+SMARTi Slate:
   <<: *common-card-mods
   card-mod-theme: "Metro Slate"
 
