--- a/custom_components/smartiupdater/manifest.json
+++ b/custom_components/smartiupdater/manifest.json
@@ -4,12 +4,7 @@
     "version": "1.2.3",
     "documentation": "https://github.com/Prosono/smarti",
     "dependencies": [],
-    "after_dependencies": [
-        "update"
-    ],
-    "codeowners": [
-        "@Prosono"
-    ],
+    "codeowners": ["@Prosono"],
     "requirements": [],
     "config_flow": true
 }
