--- a/dashboards/SMARTi_Language_Norsk.yaml
+++ b/dashboards/SMARTi_Language_Norsk.yaml
@@ -1281,7 +1281,7 @@ views:
                     unit: kr nettleie
                     icon: mdi:chart-bar
                     name: nettleie
-                  - entity: sensor.nordpool_kwh_krsand_nok_3_10_025
+                  - entity: sensor.nordpool_kwh_no5_nok_3_10_025
                     decimals: 2
                     unit: NOK
                     icon: mdi:gauge
@@ -1394,7 +1394,7 @@ views:
                     unit: kr nettleie
                     icon: mdi:chart-bar
                     name: nettleie
-                  - entity: sensor.nordpool_kwh_krsand_nok_3_10_025
+                  - entity: sensor.nordpool_kwh_no4_nok_3_10_025
                     decimals: 1
                     unit: NOK
                     icon: mdi:gauge
@@ -1814,8 +1814,7 @@ views:
                 card:
                   type: calendar
                   entities:
-                    - calendar.kalender
-                    - calendar.familiekalender
+                    - calendar.calendar
       - type: conditional
         conditions:
           - condition: screen
@@ -9028,6 +9027,15 @@ views:
                             wide: true
                             show_names: true
                             show_icons: false
+                            visibility:
+                              - condition: state
+                                entity: sensor.dynamic_power_sensor
+                                state: ''
+                              - condition: or
+                                conditions:
+                                  - condition: state
+                                    entity: sensor.dynamic_power_sensor
+                                    state: unavailable
             - attributes:
                 label: Pris
                 icon: mdi:currency-usd
@@ -10440,12 +10448,10 @@ views:
       - type: custom:gap-card
         height: 25
       - type: custom:button-card
-        entity: switch.zigbee2mqtt_bridge_permit_join_3
-        name: Permit Join
-        icon: mdi:zigbee
+        name: Legg til & administrer Zigbee enheter
         show_icon: true
+        icon: mdi:zigbee
         show_name: true
-        show_state: true
         styles:
           card:
             - max-height: 100px
@@ -10462,106 +10468,8 @@ views:
             - font-size: 20px
             - font-type: bold
         tap_action:
-          action: call-service
-          service: switch.toggle
-          service_data:
-            entity_id: switch.zigbee2mqtt_bridge_permit_join_3
-        state:
-          - value: 'on'
-            icon: mdi:zigbee
-            name: Permit Join Enabled
-            styles:
-              card:
-                - background-color: green
-              icon:
-                - color: white
-              name:
-                - color: white
-          - value: 'off'
-            icon: mdi:zigbee
-            name: Permit Join Disabled
-            styles:
-              card:
-                - background-color: red
-              icon:
-                - color: white
-              name:
-                - color: white
-      - type: horizontal-stack
-        cards:
-          - type: custom:button-card
-            name: Administrer Zigbee enheter
-            show_icon: true
-            icon: mdi:zigbee
-            show_name: true
-            styles:
-              card:
-                - max-height: 100px
-                - justify-content: center
-                - align-items: center
-              icon:
-                - color: var(--primary-color)
-                - max-height: 50px
-                - max-width: 100px
-                - min-height: 20px
-                - min-width: 20px
-              name:
-                - color: var(--primary-color)
-                - font-size: 20px
-                - font-type: bold
-            tap_action:
-              action: fire-dom-event
-              browser_mod:
-                service: browser_mod.popup
-                data:
-                  title: Administrer Zigbee enheter
-                  content:
-                    type: iframe
-                    url_path: /45df7312_zigbee2mqtt/ingress
-                    style: |
-                      iframe {
-                        width: 100%;
-                        height: 600px;
-                        border: none;
-                      }
-          - type: custom:button-card
-            name: Administrer MQTT
-            show_icon: true
-            icon: mdi:zigbee
-            show_name: true
-            styles:
-              card:
-                - max-height: 100px
-                - justify-content: center
-                - align-items: center
-              icon:
-                - color: var(--primary-color)
-                - max-height: 50px
-                - max-width: 100px
-                - min-height: 20px
-                - min-width: 20px
-              name:
-                - color: var(--primary-color)
-                - font-size: 20px
-                - font-weight: bold
-            tap_action:
-              action: call-service
-              service: browser_mod.popup
-              service_data:
-                title: Administrer Zigbee enheter
-                size: fullscreen
-                content:
-                  type: iframe
-                  url: >-
-                    /config/devices/dashboard?historyBack=1&config_entry=223a19d7a82fa51adcdedf3cf0a54b6b
-                  style: |
-                    iframe {
-                      width: 100%;
-                      height: 600px;
-                      border: none;
-                    }
-      - type: custom:gap-card
-        height: 25
+          action: navigate
+          navigation_path: /45df7312_zigbee2mqtt/ingress
       - type: custom:button-card
         name: Legg til & administrer Z-wave enheter
         show_icon: true
@@ -10586,7 +10494,7 @@ views:
           action: navigate
           navigation_path: /a0d7b954_zwavejs2mqtt/ingress
       - type: custom:button-card
-        name: Legg til & administrer Wifi & Bluetooth enheter
+        name: Legg til & administrer Wifi enheter
         show_icon: true
         icon: mdi:wifi
         show_name: true
@@ -10608,6 +10516,29 @@ views:
         tap_action:
           action: navigate
           navigation_path: /config/integrations/dashboard
+      - type: custom:button-card
+        name: Legg til & administrer Bluetooth enheter
+        show_icon: true
+        icon: mdi:bluetooth
+        show_name: true
+        styles:
+          card:
+            - max-height: 100px
+            - justify-content: center
+            - align-items: center
+          icon:
+            - color: var(--primary-color)
+            - max-height: 50px
+            - max-width: 100px
+            - min-height: 20px
+            - min-width: 20px
+          name:
+            - color: var(--primary-color)
+            - font-size: 20px
+            - font-type: bold
+        tap_action:
+          action: navigate
+          navigation_path: /config/integrations/integration/bluetooth
       - type: custom:button-card
         name: Legg til & administrer Matter enheter
         show_icon: true
