--- a/packages/smarti_navbar_package.yaml
+++ b/packages/smarti_navbar_package.yaml
@@ -16,12 +16,6 @@ sensor:
             mdi:alert-circle-outline  # or any default icon for unknown state
           {% endif %}
 
-      active_motion_detectors_list:
-        friendly_name: "Active Motion Detectors List"
-        value_template: >
-          {%- set active_motion_detectors = states.binary_sensor | selectattr('attributes.device_class', 'eq', 'motion') | selectattr('state', 'eq', 'on') | map(attribute='name') | list %}
-          {{ active_motion_detectors | join(', ') }}
-
       active_lights:
         friendly_name: "Active Lights"
         value_template: >
@@ -36,12 +30,6 @@ sensor:
           {% else %}
             mdi:alert-circle-outline  # or any default icon for unknown state
           {% endif %}
-
-      active_lights_list:
-        friendly_name: "Active Lights List"
-        value_template: >
-          {%- set active_lights = states.light | selectattr('state', 'eq', 'on') | rejectattr('state', 'eq', 'unavailable') | map(attribute='name') | list %}
-          {{ active_lights | join(', ') }}
 
       active_doors:
         friendly_name: "Active Doors"
@@ -58,12 +46,6 @@ sensor:
             mdi:alert-circle-outline  # or any default icon for unknown state
           {% endif %}
 
-      active_doors_list:
-        friendly_name: "Active Doors List"
-        value_template: >
-          {%- set active_doors = states.binary_sensor | selectattr('attributes.device_class', 'eq', 'door') | selectattr('state', 'eq', 'on') | map(attribute='name') | list %}
-          {{ active_doors | join(', ') }}
-
       active_windows:
         friendly_name: "Active Windows"
         value_template: >
@@ -78,12 +60,6 @@ sensor:
           {% else %}
             mdi:alert-circle-outline  # or any default icon for unknown state
           {% endif %}
-
-      active_windows_list:
-        friendly_name: "Active Windows List"
-        value_template: >
-          {%- set active_windows = states.binary_sensor | selectattr('attributes.device_class', 'eq', 'window') | selectattr('state', 'eq', 'on') | map(attribute='name') | list %}
-          {{ active_windows | join(', ') }}
 
       active_water_sensors:
         friendly_name: "Active Water Sensors"
@@ -100,12 +76,6 @@ sensor:
             mdi:alert-circle-outline  # or any default icon for unknown state
           {% endif %}
 
-      active_water_sensors_list:
-        friendly_name: "Active Water Sensors List"
-        value_template: >
-          {%- set active_water_sensors = states.binary_sensor | selectattr('attributes.device_class', 'eq', 'moisture') | selectattr('state', 'eq', 'on') | map(attribute='name') | list %}
-          {{ active_water_sensors | join(', ') if active_water_sensors else 'No active water sensors' }}
-
       active_gas_sensors:
         friendly_name: "Active Gas Sensors"
         value_template: >
@@ -120,12 +90,6 @@ sensor:
           {% else %}
             mdi:alert-circle-outline  # or any default icon for unknown state
           {% endif %}
-
-      active_gas_sensors_list:
-        friendly_name: "Active Gas Sensors List"
-        value_template: >
-          {%- set active_gas_sensors = states.binary_sensor | selectattr('attributes.device_class', 'eq', 'gas') | selectattr('state', 'eq', 'on') | map(attribute='name') | list %}
-          {{ active_gas_sensors | join(', ') if active_gas_sensors else 'No active gas sensors' }}
 
       active_smoke_detectors:
         friendly_name: "Active Smoke Detectors"
@@ -142,24 +106,38 @@ sensor:
             mdi:alert-circle-outline  # or any default icon for unknown state
           {% endif %}
 
-      active_smoke_detectors_list:
-        friendly_name: "Active Smoke Detectors List"
-        value_template: >
-          {%- set active_smoke_detectors = states.binary_sensor | selectattr('attributes.device_class', 'eq', 'smoke') | selectattr('state', 'eq', 'on') | map(attribute='name') | list %}
-          {{ active_smoke_detectors | join(', ') if active_smoke_detectors else 'No active smoke detectors' }}
-
       active_low_battery_devices_count:
         friendly_name: "Active Low Battery Devices Count"
         value_template: >
           {%- set low_battery_devices_count = namespace(count=0) %}
+
+          {# Filter sensors #}
           {%- for state in states.sensor | selectattr('attributes.device_class', 'eq', 'battery') %}
-            {% if state.state.isnumeric() and 0 <= state.state | int(-1) <= 20 %}
+            {% set entity_id = state.entity_id %}
+            {% set include = entity_id.startswith('sensor.') and (entity_id.endswith('_battery') or entity_id.endswith('.battery_state')) %}
+            {% set exclude = state.state in ['unavailable', '-', 'unknown', 'none', 'medium', 'high', 'charging', 'discharging', 'off', 'None'] or
+                              entity_id in ['sensor.campainha_ring_mqtt_battery', 'sensor.campainha_battery'] or
+                              'phone' in entity_id or 'browser' in entity_id or 'watch' in entity_id or 'pad' in entity_id or 'tablet' in entity_id or
+                              (state.state.isnumeric() and state.state | int >= 20) or
+                              (state.state == "0,0") %}
+            {% if include and not exclude and state.state.isnumeric() and 0 <= state.state | int <= 20 %}
               {%- set low_battery_devices_count.count = low_battery_devices_count.count + 1 %}
             {% endif %}
           {%- endfor %}
-          {%- for state in states.binary_sensor | selectattr('attributes.device_class', 'eq', 'battery') | selectattr('state', 'eq', 'on') %}
-            {%- set low_battery_devices_count.count = low_battery_devices_count.count + 1 %}
+
+          {# Filter binary sensors #}
+          {%- for state in states.binary_sensor | selectattr('attributes.device_class', 'eq', 'battery') %}
+            {% set entity_id = state.entity_id %}
+            {% set include = entity_id.startswith('binary_sensor.') and 'battery_low' in entity_id %}
+            {% set exclude = state.state in ['unavailable', '-', 'unknown', 'none', 'medium', 'high', 'charging', 'discharging', 'off', 'None'] or
+                              entity_id in ['sensor.campainha_ring_mqtt_battery', 'sensor.campainha_battery'] or
+                              'phone' in entity_id or 'browser' in entity_id or 'watch' in entity_id or 'pad' in entity_id or 'tablet' in entity_id or
+                              (state.state == "0,0") %}
+            {% if include and not exclude and state.state == 'on' %}
+              {%- set low_battery_devices_count.count = low_battery_devices_count.count + 1 %}
+            {% endif %}
           {%- endfor %}
+
           {{ low_battery_devices_count.count }}
         icon_template: >
           {% if states('sensor.active_low_battery_devices_count')|int > 0 %}
@@ -167,19 +145,6 @@ sensor:
           {% else %}
             mdi:battery
           {% endif %}
-
-      active_battery_devices_list:
-        friendly_name: "Active Battery Devices List"
-        value_template: >
-          {%- set active_battery_devices = states.sensor |
-            selectattr('attributes.device_class', 'eq', 'battery') |
-            selectattr('attributes.state_class', 'eq', 'measurement') %}
-          {% for device in active_battery_devices %}
-            {% set battery_level = device.state | int(-1) %}
-            {% if battery_level >= 0 and battery_level < 20 and device.name %}
-              {{ device.name }} (Battery Level: {{ battery_level }}){% if not loop.last %}, {% endif %}
-            {% endif %}
-          {% endfor %}
 
 input_text:
   default_dashboard:
